0.13/_sources/api/generated/deepchecks.tabular.checks.train_test_validation.FeatureDrift.rst.txt

FeatureDrift
============



.. currentmodule:: deepchecks.tabular.checks.train_test_validation

.. autoclass:: FeatureDrift
   :special-members: __init__







.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   FeatureDrift.add_condition
   
   
   FeatureDrift.add_condition_drift_score_less_than
   
   
   FeatureDrift.clean_conditions
   
   
   FeatureDrift.conditions_decision
   
   
   FeatureDrift.config
   
   
   FeatureDrift.feature_reduce
   
   
   FeatureDrift.from_config
   
   
   FeatureDrift.from_json
   
   
   FeatureDrift.greater_is_better
   
   
   FeatureDrift.metadata
   
   
   FeatureDrift.name
   
   
   FeatureDrift.params
   
   
   FeatureDrift.reduce_output
   
   
   FeatureDrift.remove_condition
   
   
   FeatureDrift.run
   
   
   FeatureDrift.run_logic
   
   
   FeatureDrift.to_json
   
















Examples
~~~~~~~~

.. raw:: html

    <div class="sphx-glr-thumbcontainer">

.. only:: html

 .. figure:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_feature_drift_thumb.png
     :alt: FeatureDrift

     :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_feature_drift.py`

.. raw:: html

    </div>
    <div style="clear:both"></div>


