0.14/_sources/api/generated/deepchecks.tabular.checks.train_test_validation.FeatureDrift.rst.txt

FeatureDrift
============



.. currentmodule:: deepchecks.tabular.checks.train_test_validation

.. autoclass:: FeatureDrift
   :special-members: __init__



.. rubric:: Attributes

.. autosummary::
   :toctree:

   
   FeatureDrift.n_top_columns
   

   
   FeatureDrift.sort_feature_by
   

   
   FeatureDrift.margin_quantile_filter
   

   
   FeatureDrift.max_num_categories_for_drift
   

   
   FeatureDrift.min_category_size_ratio
   

   
   FeatureDrift.max_num_categories_for_display
   

   
   FeatureDrift.show_categories_by
   

   
   FeatureDrift.numerical_drift_method
   

   
   FeatureDrift.categorical_drift_method
   

   
   FeatureDrift.ignore_na
   

   
   FeatureDrift.min_samples
   

   
   FeatureDrift.n_samples
   






.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   FeatureDrift.add_condition
   
   
   FeatureDrift.add_condition_drift_score_less_than
   
   
   FeatureDrift.clean_conditions
   
   
   FeatureDrift.conditions_decision
   
   
   FeatureDrift.config
   
   
   FeatureDrift.feature_reduce
   
   
   FeatureDrift.from_config
   
   
   FeatureDrift.from_json
   
   
   FeatureDrift.greater_is_better
   
   
   FeatureDrift.metadata
   
   
   FeatureDrift.name
   
   
   FeatureDrift.params
   
   
   FeatureDrift.reduce_output
   
   
   FeatureDrift.remove_condition
   
   
   FeatureDrift.run
   
   
   FeatureDrift.run_logic
   
   
   FeatureDrift.to_json
   
















Examples
~~~~~~~~

.. raw:: html

    <div class="sphx-glr-thumbcontainer">

.. only:: html

 .. figure:: /tabular/auto_checks/train_test_validation/images/thumb/sphx_glr_plot_feature_drift_thumb.png
     :alt: FeatureDrift

     :ref:`sphx_glr_tabular_auto_checks_train_test_validation_plot_feature_drift.py`

.. raw:: html

    </div>
    <div style="clear:both"></div>


